confik-macros/tests/trybuild/fail-config-name-value.rs
#[derive(confik::Configuration)]
struct Config {
    #[confik = "foo"]
    _param: String,
}

fn main() {}
